# stud_attend

./: CMakeLists.txt  ImageUtils.h  ImageUtils_0.7.cpp  Makefile  README.md  ReadMe.txt  cmake_install.cmake  compareImg.py  detectObject.cpp  detectObject.h  generalMakefile  main.cpp  preprocessFace.cpp  preprocessFace.h  recognition.cpp  recognition.h
